# chess-ai-api

./: .envrc  .gitignore  ChessEngine.py  Game.py  LICENSE  README.md  ai.py  env.py  flake.nix  lefthook.yml  main.py  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 565iidvjandrsv677y9fz2i7hhadf8a4-source  ad7m39h49x2c4i9lzqhx4iy8kka8wchd-source  g83ji892byw4wd81rmb14v69yrhq408s-source  jrn9z7vk7jshspyvmrja1hz8cajd79cf-source  jxq8gbrg8azrwh2zji9vxy73jcv443br-source  ldcf0nwsjfwg4vbfd5d0r2dzb1f4wcrz-source  papjgkg8lwdad6qrqys31hx2rq87vd1y-source  w9i2hr8pj6gn9mqgl4qydavf5nvd6dc5-source  yn8an2j019983fh3fcvvx8skmmmd32rj-source
tests/: fen_regex_test.py
